# SDL2_gradle_template

./: .gitignore  LICENSE  README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/io/github/morbo84/sdl2gradleexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/my_module/: CMakeLists.txt  main.cpp
app/src/main/cpp/patches/: SDL2_CMakeLists.patch
app/src/main/java/io/github/morbo84/sdl2gradleexample/: MainActivity.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/morbo84/sdl2gradleexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
